# foundry

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
.claude/: settings.json
.sqlx/: query-02c9360bdfdd2d3d39cd0caa57c0a4c8531d36acc373ce1fc1e7bd954bc6f90c.json  query-03a540623c9b196771e2c84c674cbf06b8ff7ce3ac61b6a3c642b947cbd23d8f.json  query-03e48529dcd64bb7a1fdc5a41c8838b95aac46223189dce54b2c9ba367e9ca6f.json  query-03fcd36751d0222ca1f188e37d4010f088218454a2e6555b69aa983606d10428.json  query-04230ffaf4dd63355a406babea5e861ce434c570f996f7a5e40f7af869259f22.json  query-054526f2167f34cf79c2c2c3ff9dc1f9f031850601edd93533ae5a6173d6e6fe.json  query-05a5def6bbaf58c435572e99e9ac190720bfbb1c1f3e38c4c02a5f1b83fcaa17.json  query-05e4aee046746204fa0069fd3557e5eb3e80425a88a4e008944482b20853beac.json  query-08f030109d0c32b00b07b1659953e80ada7fc0888f363b019fb4047eac046a60.json  query-092c1a502e23b6a2652637fbc23cb4ce6424c44fef6a0910ff59fcb13611858b.json  query-0b51ccd172ef9ff5a101e21afa86a9932f7ec168d1eec0721b90dde087c7d754.json  query-0b915a70951ea89af006ff3d4cb76d13681c9fbb5166924c6e84f6c80d7e3a6a.json  query-0bcf6885372c55c57aa14984919ea382c043fa03010a9cd64c49ea8d20fa426c.json  query-0bf98e1bac4319a45865b76e29644634a35a56b46080edc2184a40092f7fa333.json  query-0c454f723e1ab69696f03654a2c4ebffa4b390e1ad46541619225cf28752e049.json  query-0e6b36d81f58d244b855f8caa53d36b6787b3dd0660199457b556fb590251290.json  query-101129b7d3739924b65f6dd4d5eb0fe3adb9f7bbbbfa2317709e6afb3d2861c8.json  query-11409756140d75b131fa33fe8d962fe8fdd9cb9329c87de487d1d0e3738be1a8.json  query-11cdfd723ddb0450ece4de279bd915502fe2f297332f3e3526fc9b9e8f4c3065.json  query-14471dc51440b5c9f30e6775e6c8ac5fe22ecf304411008c32b82fc949eb9814.json  query-16800f0ba4d38ef21abaefc0d3537971f5e01a7d569f67d82779281e69c6cde9.json  query-18173e4ae7b8395ca26aa276cc17121004d28e010034a462353558653646551e.json  query-18dd1955d90b755136f50da6fe394e19b81237aade13981bc45ab1e7230d0808.json  query-1912059f8f5f4f7548801ef2beeb119f857c9d9ac01df77cf7e0dd86f78a2531.json  query-195304ab895d15e2f195569667bb34cde793fa9da38ec4d643ea9a76860acf81.json  query-1960a2001ece7507a7a0716270c3964229603e3f12d61bd5ab8da148a71e0560.json  query-1c8015dfd3c7d3617079083908822891258031cadd3c8706e9421ae5b53650e1.json  query-1c9486fa4f22250890c117b1c8ee855b3cd8162b8dae3388e739c2c86c093bb4.json  query-1d3b4d1844e5f986b0e405bdec253ef234d6a418e5f22937044879435b47c1e5.json  query-1dac97d08866219daa48299506102ac9e9df45f01b42ae704fd47832029a9145.json  query-1f8546a491e464b503075e2ca603b0068314e32390021328ccfb7f0e96822ef8.json  query-208b78e9c8171a62324b39829af44795b2ae96e3b819aff2ec018fa30e763b51.json  query-213bc16caca44dbd01274853a1b85dbd5fc92b4536bcdd8636129f63781320e3.json  query-21e99d1cb9ae7122b97febb9a6304e56a304ef4e964087d7521b716d97c14123.json  query-22fe7fc6263be964ded5757a896a698500c74e786318f81c1a1d4c7c8e3b10ca.json  query-2368852699e17deb9b150b81571f9d13677fc6f23bce440219f8aa1c0fd62fae.json  query-239a36c83720102ad166e38f50adf69d6fd00e125f25ee09c9b029c997eb0500.json  query-246239393a7a70c49c113f6c852bf14915e6be60ebd1862288aa476be3366ec5.json  query-270c916fe1d376a188cae15911f11d34acb0dbf54cf8aa3e18d6ecf551218ec5.json  query-2752a5fd9c0f4b7e126718ca84dc7e11d876b8672c5f1eb606829fd922531289.json  (+231 more)
advisor-plans/: 001-servers-list-n-plus-1.md  002-codebase-map-drift.md  003-frontend-test-harness.md  004-dx-env-example-and-typecheck.md  005-mutex-poison-hardening.md  006-ci-pipeline.md  README.md
agent/: Cargo.toml
agent/src/: config.rs  docker.rs  file_system.rs  files.rs  host.rs  inventory.rs  logs.rs  main.rs  metrics.rs  register.rs  shell.rs  tasks.rs  traffic.rs  vhost.rs
controller/: Cargo.toml
controller/src/: agent_version.rs  audit.rs  cli.rs  config.rs  crypto.rs  db_tests.rs  error.rs  files.rs  lifecycle.rs  main.rs  shell.rs  state.rs
controller/src/auth/: agent.rs  cookies.rs  mod.rs  routes.rs  session.rs
controller/src/gitlab/: access.rs  client.rs  mod.rs  oauth.rs  registry.rs  tokens.rs  types.rs
controller/src/repos/: deployment_adoption.rs  deployment_queries.rs  deployment_targets.rs  deployments.rs  gpu_groups.rs  instances.rs  inventory.rs  local_admins.rs  logs.rs  metrics.rs  mirror.rs  mod.rs  servers.rs  slots.rs  tasks.rs  traffic.rs  users.rs  volumes.rs
controller/src/routes/: agent.rs  audit.rs  deployments.rs  gpu_groups.rs  health.rs  instances.rs  me.rs  mod.rs  projects.rs  prometheus.rs  registry.rs  servers.rs  volumes.rs
deployment/: README.md  mysql-backup.cnf.example
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  FRONTEND_RULES.md  GITLAB-INTEGRATION.md  GPU-MIG.md  ROADMAP.md  RUST_RULES.md  SECURITY.md  TESTING.md  UI-DESIGN.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
migrations/: 20260611000001_initial_schema.sql  20260611000002_sessions.sql  20260611000003_local_credentials.sql  20260611000004_enrollment_token_targets.sql  20260611000005_server_docker_status.sql  20260612000005_server_containers.sql  20260612000006_gpu_display_index.sql  20260612000007_server_metrics.sql  20260612000008_deployment_port_kind.sql  20260612000009_server_volumes.sql  20260612000010_volume_owner_namespace.sql  20260612000011_deployment_port_hostname.sql  20260612000012_deployment_port_hostname_index.sql  20260612000013_server_app_publishing.sql  20260612000014_container_gpu_uuids.sql  20260612000015_server_nginx_status.sql  20260614000001_deployment_logs.sql  20260614000002_server_docker_ok.sql  20260616000001_deployment_mem_limit.sql  20260616000002_gpu_groups.sql  20260616000003_group_use_mode.sql  20260617000001_fleet_enrollment.sql  20260617000002_container_mounts.sql  20260617000003_adopt_external_containers.sql  20260715000001_active_adoption_unique.sql  20260720000001_project_volume_scopes.sql  20260721000001_operational_safety.sql  20260721000002_placement_volume_scopes.sql  20260721000003_deploy_volume_namespaces.sql  20260721000004_repair_legacy_volume_namespaces.sql  README.md
(+167 files in other folders)
