[workspace]
resolver = "2"
members = ["controller", "agent", "shared"]

[workspace.package]
# Bump the minor version on EVERY production deploy (operator rule:
# 0.1 -> 0.2 -> 0.3) and keep frontend/package.json in sync.
version = "0.47.0"
edition = "2021"

[workspace.dependencies]
foundry-shared = { path = "shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# `fs` + `process` drive the agent's vhost manager (conf writes + the
# sudo-scoped nginx test/reload); listed here so the agent compiles
# standalone instead of borrowing them via feature unification.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "fs", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "uuid", "chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
toml = "0.8"
dotenvy = "0.15"
# Agent-side discovery (Phase 5): NVML loads libnvidia-ml at runtime
# (hosts without it report gracefully), bollard talks to the local
# Docker socket only.
nvml-wrapper = "0.12"
bollard = "0.19"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
