[package]
name = "foundry-controller"
version.workspace = true
edition.workspace = true

[dependencies]
foundry-shared = { workspace = true }
axum = { workspace = true, features = ["ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
# WebSocket sink/stream split for the interactive shell bridge.
futures-util = "0.3"
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
# Secrets at rest (docs/SECURITY.md): AES-256-GCM for tokens + client
# secrets; sha2 for session-token and enrollment hashes.
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.9"
base64 = { workspace = true }
# Local operator account password hashing (docs/SECURITY.md).
argon2 = { version = "0.5", features = ["std"] }
# Constant-time agent-credential comparison.
subtle = "2"
# cookie max-age durations (the cookie crate's time type)
time = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
